# hyprfm

./: .SRCINFO  .gitignore  .gitmodules  BRAINSTORM.md  CLAUDE.md  CMakeLists.txt  LICENSE  PKGBUILD  README.md  hyprfm.desktop  io.github.soyeb_jim285.HyprFM.yml
.github/workflows/: aur.yml  build.yml
docs/: TESTING.md  TODO.md
docs/superpowers/plans/: 2026-03-22-hyprfm-mvp.md  2026-03-27-quill-migration.md
docs/superpowers/specs/: 2026-03-22-hyprfm-design.md  2026-04-03-high-value-features-design.md
scripts/: build-appimage-local.sh  release.sh  sync-aur.sh
src/: CMakeLists.txt  main.cpp
src/models/: bookmarkmodel.cpp  bookmarkmodel.h  devicemodel.cpp  devicemodel.h  filesystemmodel.cpp  filesystemmodel.h  recentfilesmodel.cpp  recentfilesmodel.h  searchproxymodel.cpp  searchproxymodel.h  searchresultsmodel.cpp  searchresultsmodel.h  tablistmodel.cpp  tablistmodel.h  tabmodel.cpp  tabmodel.h
src/providers/: iconprovider.h  pdfpreviewprovider.cpp  pdfpreviewprovider.h  thumbnailprovider.cpp  thumbnailprovider.h
src/qml/: Main.qml  main.qml
src/qml/components/: Breadcrumb.qml  BulkRenameDialog.qml  ContextMenu.qml  FileTabBar.qml  FilterPanel.qml  HoverRect.qml  KeyboardShortcutsDialog.qml  MissingDependenciesDialog.qml  OperationsBar.qml  QuickPreview.qml  RemoteConnectDialog.qml  RubberBand.qml  SearchBar.qml  SettingsPanel.qml  Sidebar.qml  StatusBar.qml  Toast.qml  Toolbar.qml
src/qml/icons/: IconAlignJustify.qml  IconCheck.qml  IconChevronDown.qml  IconChevronLeft.qml  IconChevronRight.qml  IconChevronUp.qml  IconGrid.qml  IconList.qml  IconX.qml
src/qml/theme/: Theme.qml
src/qml/views/: FileDetailedView.qml  FileGridView.qml  FileListView.qml  FileMillerView.qml  FileViewContainer.qml  KineticWheelScroller.qml
src/services/: clipboardmanager.cpp  clipboardmanager.h  configmanager.cpp  configmanager.h  dependencychecker.cpp  dependencychecker.h  diskusageservice.cpp  diskusageservice.h  draghelper.cpp  draghelper.h  fileoperations.cpp  fileoperations.h  giotransferworker.cpp  giotransferworker.h  gitstatusservice.cpp  gitstatusservice.h  metadataextractor.cpp  metadataextractor.h  previewservice.cpp  previewservice.h  remoteaccessservice.cpp  remoteaccessservice.h  runtimefeaturesservice.cpp  runtimefeaturesservice.h  searchservice.cpp  searchservice.h  themeloader.cpp  themeloader.h  undomanager.cpp  undomanager.h
tests/: CMakeLists.txt  testdir.h  tst_bookmarkmodel.cpp  tst_clipboardmanager.cpp  tst_configmanager.cpp  tst_devicemodel.cpp  tst_diskusageservice.cpp  tst_fileoperations.cpp  tst_filesystemmodel.cpp  tst_giotransferworker.cpp  tst_iconprovider.cpp  tst_pdfpreviewprovider.cpp  tst_previewservice.cpp  tst_searchproxymodel.cpp  tst_searchresultsmodel.cpp  tst_searchservice.cpp  tst_tabmodel.cpp  tst_themeloader.cpp  tst_thumbnailprovider.cpp  tst_undomanager.cpp
themes/: catppuccin-latte.toml  catppuccin-mocha.toml
